fixes and tweaks